fix margin spacing

--- a/sass/px-key-value-pair.scss
+++ b/sass/px-key-value-pair.scss
@@ -32,31 +32,33 @@
 // Objects
 
 // Component
+
 .kvp-value {
-  color: var(--px-key-value-pair-value-color, black);
+  color: var(--px-headings-value-color, black);
 }
 
 .kvp-margin--alpha {
-  margin-top: calculateRem(12px);
+  margin-top: calculateRem(-12px);
 }
 
 .kvp-margin--beta {
-  margin-top: calculateRem(10px);
+  margin-top: calculateRem(-6px);
 }
 
 .kvp-margin--gamma {
-  margin-top: calculateRem(9px);
+  margin-top: calculateRem(-12px);
 }
 
 .kvp-margin--delta {
-  margin-top: calculateRem(8px);
+  margin-top: calculateRem(-8px);
 }
 
 .kvp-margin--epsilon {
-  margin-top: calculateRem(7px);
+  margin-top: calculateRem(-2px);
 }
+
 .kvp-margin--regular {
-  margin-top: calculateRem(6px);
+  margin-top: calculateRem(-4px);
 }
 
 // Trumps
